tests/mvar/reject/match_branch_call.nos
# expect: error
# Match expression with call to mvar function

mvar state: Int = 0

update_state() = {
    state = state + 1
    state
}

process(x) = {
    # UNSAFE: reads state and calls update_state in match
    match x
        0 -> state
        _ -> update_state()
    end
}

main() = {
    process(1)
}
